testimonials page implementation

--- a/testimonials.html
+++ b/testimonials.html
@@ -42,7 +42,68 @@
     </div>
   </header>
 
+  <!-- Section Customers saying -->
+  <section class="container customers-saying">
+    <img src="images/customers-saying.svg" alt="customers saying">
+  </section>
 
+  <!-- Section Testimonials -->
+  <section class="container testimonials mt-2">
+    <div class="row">
+      <div class="col-lg-6 testimonial mt-5">
+        <h3 class="testimonials-header mb-3">
+          Very Thrilled and Satifying
+        </h3>
+        <p class="testimonials-body text-justify mb-4">
+          "I have now made several purchases with Shop and Go in the last year. Each and every time, I have been
+          extremely satisfied and thrilled. The item arrived usually within a week, nicely wrapped in black tissue paper
+          and well protected, with original boxes or dust bags where applicable. The condition of the items was as
+          described and I have no concerns about their authenticity.""
+        </p>
+        <div class="testimonials-footer">
+          <img src="images/davidyeng.svg" alt="david yeng"><span>CHRISTIANA | BRAZIL</span>
+        </div>
+      </div>
+      <div class="col-lg-6 testimonial mt-5">
+        <h3 class="testimonials-header mb-3">
+          My Fashion Secret Weapon
+        </h3>
+        <p class="testimonials-body text-justify mb-4">
+          "I love love my Christian Louboutin boots and shoes! What an amazing deal as well as my LV mules that I've
+          been looking for forever! Thanks for the amazing experience and customer service Lauren.... you're my fashion
+          secret weapon! Lol!"
+        </p>
+        <div class="testimonials-footer">
+          <img src="images/christiana.svg" alt="david yeng"><span>CHRISTIANA | BRAZIL</span>
+        </div>
+      </div>
+      <div class="col-lg-6 testimonial mt-5">
+        <h3 class="testimonials-header mb-3">
+          Quick and Fast Delivery
+        </h3>
+        <p class="testimonials-body text-justify mb-4">
+          "I have just received my purchase! Thank you for helping me track it down and thank you so much for the gift
+          card. You are by far the best Canadian online consignment store I know. I buy from a lot of places but always
+          check yours first."
+        </p>
+        <div class="testimonials-footer">
+          <img src="images//michael.svg" alt="david yeng"><span>MICHEAL | GHANA</span>
+        </div>
+      </div>
+      <div class="col-lg-6 testimonial mt-5">
+        <h3 class="testimonials-header mb-3">
+          Very Impresive User Interface
+        </h3>
+        <p class="testimonials-body text-justify mb-4">
+          "I’m more than impressed with the amount of fabulous things I came across on the site and I’m so excited to
+          receive my beautiful clutch I purchased. I definitely will be keeping up with new arrivals frequently."
+        </p>
+        <div class="testimonials-footer">
+          <img src="images/chinedu.svg" alt="david yeng"><span>CHINEDU | NIGERIA</span>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="footer mt-5">
