--- a/testimonials.html
+++ b/testimonials.html
@@ -150,6 +150,9 @@
           <div class="footer-form"><input type="text" placeholder="Email"><button>Subscribe</button></div>
         </div>
       </div>
+      <div class="text-center p-3">
+        &copy; 2020 Shop & Go
+      </div>
     </div>
   </footer>
 
