--- a/testimonials.html
+++ b/testimonials.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="sticky-top">
     <div class="container header large">
       <div class="d-sm-block d-md-none toggler">
         <div class="line"></div>
@@ -37,7 +37,7 @@
               class="mr-3" /><span class='d-none d-md-inline'>Cart</span></span></a>
       </div>
     </div>
-    <div class="container search-div search d-md-none">
+    <div class="container search-div search d-md-none pt-1 pb-2">
       <input type="text" class="mr-4" /><button>Search</button>
     </div>
   </header>
